package cx.corp.lacuna.ui.presenter;

public interface MainCallbacks {
    void newActiveProcessSelected();
}
