package cx.corp.lacuna.ui.presenter;

public interface Presenter {
    void initialize();
}
